--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "lodash.uniq": "^4.5.0",
     "lodash.upperfirst": "^4.3.1",
     "mysql2": "^2.1.0",
-    "quickly-count-substrings": "^1.0.0"
+    "quickly-count-substrings": "^1.0.0",
+    "ssh2": "^0.8.7"
   },
   "devDependencies": {
     "chalk": "^3.0.0",
     "jest": "^25.1.0",
     "moment": "^2.24.0",
     "prettier": "^1.19.1",
+    "pretty-var-export": "^1.0.1",
     "prompts": "^2.3.1",
     "walkdir": "^0.4.1"
   }
