--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Classes for running SQL and building select queries in MySQL",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest --watch",
+    "test": "npx jest",
+    "test-watch": "npx jest --watch",
     "coverage": "npx jest --collectCoverage",
-    "docs": "npx documentation build src/** -f html -o docs"
+    "docs": "npx documentation build src/** -f html -o docs",
+    "open-docs": "open './docs/index.html'"
   },
   "repository": {
     "type": "git",
