--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "chalk": "^3.0.0",
+    "codecov": "^3.6.5",
     "documentation": "^12.1.4",
     "jest": "^25.1.0",
     "moment": "^2.24.0",
