--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sharp-db",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Classes for running SQL and building select queries in MySQL",
   "main": "index.js",
   "scripts": {
@@ -41,13 +41,13 @@
     "ssh2": "^0.8.9"
   },
   "devDependencies": {
-    "chalk": "^3.0.0",
+    "ansi-colors": "^4.1.1",
     "codecov": "^3.6.5",
-    "documentation": "^12.1.4",
-    "jest": "^25.1.0",
-    "moment": "^2.24.0",
-    "prettier": "^2.0.0",
-    "pretty-var-export": "^1.0.2",
+    "documentation": "^12.3.0",
+    "jest": "^25.5.4",
+    "moment": "^2.25.1",
+    "prettier": "^2.0.5",
+    "pretty-var-export": "^1.1.3",
     "prompts": "^2.3.2",
     "walkdir": "^0.4.1"
   }
