--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sharp-db",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Classes for running SQL and building select queries in MySQL",
   "main": "index.js",
   "scripts": {
@@ -29,25 +29,20 @@
   },
   "homepage": "https://github.com/kensnyder/sharp-db#readme",
   "dependencies": {
-    "lodash.camelcase": "^4.3.0",
-    "lodash.capitalize": "^4.2.1",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.escaperegexp": "^4.1.2",
-    "lodash.isempty": "^4.4.0",
-    "lodash.upperfirst": "^4.3.1",
-    "mysql2": "^2.1.0",
+    "lodash": "^4.17.20",
+    "mysql2": "^2.2.5",
     "quickly-count-substrings": "^1.0.0",
     "ssh2": "^0.8.9"
   },
   "devDependencies": {
     "ansi-colors": "^4.1.1",
-    "codecov": "^3.7.2",
-    "documentation": "^13.0.2",
-    "jest": "^26.4.2",
-    "moment": "^2.27.0",
-    "prettier": "^2.0.5",
+    "codecov": "^3.8.1",
+    "documentation": "^13.1.1",
+    "jest": "^26.6.3",
+    "moment": "^2.29.1",
+    "prettier": "^2.2.1",
     "pretty-var-export": "^1.1.3",
-    "prompts": "^2.3.2",
+    "prompts": "^2.4.0",
     "walkdir": "^0.4.1"
   }
 }
