--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "ssh2": "1.11.0"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.21",
+    "@types/ssh2": "^1.11.6",
     "ansi-colors": "4.1.3",
     "codecov": "3.8.3",
     "jest": "29.1.2",
