--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "type": "module",
   "scripts": {
-    "test": "npx jest",
-    "test-watch": "npx jest --watch",
+    "test": "vitest",
+    "test-watch": "vitest",
     "coverage": "npx jest --coverage",
+    "clean": "rimraf dist/ && mkdir dist && touch dist/.gitkeep",
+    "build": "npm run clean && npx -p typescript tsc --project tsconfig.build.json",
     "view-coverage": "open ./coverage/lcov-report/index.html",
     "docs": "npx jsdoc --configure .jsdoc.json --verbose",
     "view-docs": "open docs/index.html"
@@ -35,24 +37,25 @@
   "homepage": "https://github.com/kensnyder/sharp-db#readme",
   "dependencies": {
     "is-plain-object": "5.0.0",
-    "lodash": "4.17.21",
-    "mysql2": "2.3.3",
+    "lodash-es": "^4.17.21",
+    "mysql2": "3.6.1",
     "quickly-count-substrings": "1.0.0",
-    "ssh2": "1.11.0"
+    "ssh2": "1.14.0"
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.21",
-    "@types/ssh2": "^1.11.6",
+    "@types/mysql": "^2.15.22",
+    "@types/ssh2": "^1.11.14",
     "ansi-colors": "4.1.3",
     "codecov": "3.8.3",
-    "jest": "29.1.2",
-    "jsdoc": "3.6.11",
+    "jsdoc": "4.0.2",
     "minami": "1.2.3",
     "moment": "2.29.4",
-    "prettier": "2.7.1",
+    "prettier": "3.0.3",
     "pretty-var-export": "1.1.7",
     "prompts": "2.4.2",
-    "typescript": "^4.9.3",
-    "walkdir": "0.4.1"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2",
+    "walkdir": "0.4.1",
+    "vitest": "^0.34.6"
   }
 }
