--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,13 @@
 {
-	"trailingComma": "es5",
-	"printWidth": 80,
-	"tabWidth": 2,
-	"useTabs": true,
-	"semi": true,
-	"singleQuote": true,
-	"bracketSpacing": true,
-	"jsxBracketSameLine": false,
-	"arrowParens": "avoid",
-	"endOfLine": "lf"
+  "plugins": ["prettier-plugin-organize-imports"],
+  "trailingComma": "es5",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
