--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
   "keywords": [
     "Db",
     "Select",
+    "parse SQL",
+    "SQL Parser",
+    "Select Parser",
     "MySQL",
     "mysql2",
+    "PostgreSQL",
+    "Postgres",
+    "pg",
     "ssh"
   ],
   "author": "kendsnyder@gmail.com",
@@ -36,28 +42,41 @@
   },
   "homepage": "https://github.com/kensnyder/sharp-db#readme",
   "dependencies": {
-    "@types/pg": "^8.10.5",
     "is-plain-object": "5.0.0",
-    "lodash-es": "^4.17.21",
-    "mysql2": "3.6.1",
-    "pg": "^8.11.3",
-    "quickly-count-substrings": "1.0.0",
-    "ssh2": "1.14.0"
+    "lodash.clonedeep": "4.5.0"
+  },
+  "peerDependencies": {
+    "mysql2": "3.x",
+    "pg": "8.x",
+    "ssh2": "1.x"
+  },
+  "peerDependenciesMeta": {
+    "mysql2": {
+      "optional": true
+    },
+    "pg": {
+      "optional": true
+    },
+    "ssh2": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.22",
-    "@types/ssh2": "^1.11.14",
+    "@types/mysql": "2.15.24",
+    "@types/pg": "8.10.9",
+    "@types/ssh2": "1.11.17",
     "ansi-colors": "4.1.3",
     "codecov": "3.8.3",
     "jsdoc": "4.0.2",
     "minami": "1.2.3",
     "moment": "2.29.4",
-    "prettier": "3.0.3",
+    "prettier": "3.1.0",
+    "prettier-plugin-organize-imports": "3.2.4",
     "pretty-var-export": "1.1.7",
     "prompts": "2.4.2",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
+    "rimraf": "5.0.5",
+    "typescript": "5.3.2",
+    "vitest": "0.34.6",
     "walkdir": "0.4.1"
   }
 }
